fix: align

--- a/src/components/Sections/AboutMeSection/styles.module.css
+++ b/src/components/Sections/AboutMeSection/styles.module.css
@@ -18,10 +18,9 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
-    letter-spacing: 0em;
-    text-align: left;
-
+    margin: 0;
 }
+
 
 @media(min-width: 46rem){
     .aboutMeSection{
